# PeerWeights

./: .gitignore  CLAUDE.md  CONTEXT.md  package-lock.json  package.json
.claude/agents/: feature-coordinator.md
.claude/plans/: full-platform-mvp.md
cli/: package.json
cli/src/: index.ts
deploy/: peerweights.nginx.conf  peerweights.service  setup-vps.sh
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs  reporter.rs
desktop/src-tauri/src/torrent/: engine.rs  state.rs
scripts/: create-admin.mjs  reseed-torrents.sh  upload-model.mjs
server/: .env.example  package.json
server/prisma/: schema.prisma
server/prisma/migrations/20260317161528_init/: migration.sql
server/src/: index.ts
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  api.ts  desktop.ts  styles.css  types.ts
web/src/pages/: CheckoutCancel.tsx  CheckoutSuccess.tsx  CreatorDashboard.tsx  Downloads.tsx  Home.tsx  Library.tsx  Login.tsx  ModelDetail.tsx  Register.tsx  Search.tsx  UserProfile.tsx
web/src/stores/: authStore.ts  creatorStore.ts  downloadStore.ts  libraryStore.ts  modelStore.ts
