[package]
name = "peerweights-desktop"
version = "0.1.0"
edition = "2021"
description = "PeerWeights Desktop Client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
librqbit = "8"
dirs = "6"
base64 = "0.22"
hex = "0.4"
open = "5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
